Fix selected link and scrollbar gutter

--- a/css/basics/base.css
+++ b/css/basics/base.css
@@ -4,6 +4,7 @@
 
 html {
     color: var(--clr-text);
+    scrollbar-gutter: stable;
 }
 
 body {
